2009-01-19 Chris Allegretta <chrisa@asty.org>
	* Change funcion definitions to shorts instead of (void *)s.  New mapping function
          iso_me_harder_funcmap().  Fixes compilation complaints with -pedantic, 
	  reported by Eitan Adler <eitanadlerlist@gmail.com>.

GNU nano 2.1.7 - 2008.11.10
2008-10-20 Chris Allegretta <chrisa@asty.org>
	* files.c (do_writeout): Add check for file modification when saving
	  the file so the user can at least know they may be blowing away changes.

2008-10-14 Chris Allegretta <chrisa@asty.org>
	* nanorc.5: Fix redo man page entry and update explanation, reported by
	  Eitan Adler <eitanadlerlist@gmail.com>
	* global.c (shortcut_init), search.c (search_init): Fix add_to_sclist for ^W^T so
	  invalid messages will display properly.  Fixes Savannah bug 24507.

2008-10-13 Chris Allegretta <chrisa@asty.org>
	* Remove CUTTOEND as an undo type as it's unneeded, fix u->to_end logic in undo struct.
	* undo.c (update_undo): Don't free cutbuffer if NULL, fix for Savannah bug #24499

2008-10-04 Chris Allegretta <chrisa@asty.org>
	* cut.c (Add_undo): Save last cut undo information so it can be used for next uncut, fixes
	  Savannah bug 24183.

GNU nano 2.1.6 - 2008.10.03
2008-10-03 Pascal Gentil <pascal.gentil@univ-rennes1.fr>
	* fortran.nanorc: Sample python syntax highlighting file

2008-09-30 Dirkjan Ochtman <dirkjan@ochtman.nl>
	* python.nanorc: Small python syntax update

2008-09-30 <bluestorm_dylc@hotmail.com>
	* ocaml.nanorc: Sample OCaml syntax highlighting file

2008-09-30 Dave Geering <dgeering@toshiba-tap.com>
	* objc.nanorc: Sample Objective-C Syntax Hightlighting file

2008-09-30 Chris Allegretta <chrisa@asty.org>
        * configure.ac: Change extra, multibuffer, color and rcfile configure options to default to enabled
          --enable-tiny will now disable these options as well
	* python.nanorc, ruby.nanorc: Add header lines for python and ruby as well

2008-09-21 Chris Allegretta <chrisa@asty.org>